# University

1st year/First Semester/Computational Logic/: COMPUTATIONAL LOGIC.docx  ~$am-Computational_Logic-Subjects_2020-2021.doc
1st year/Second Semester/Graph Algorithms/: GRAPH.docx  main.py
1st year/Second Semester/Oop/Exam/: CMakeLists.txt
1st year/Second Semester/Oop/Exam Practice/: CMakeLists.txt
1st year/Second Semester/Oop/Exam Practice/First Part/: Car.h  List.h  main.cpp
1st year/Second Semester/Oop/Exam Practice/Second Part/: Discount.h  ItemDiscount.cpp  ItemDiscount.h  Sale.cpp  Sale.h  SaleItem.cpp  SaleItem.h  SumDiscount.cpp  SumDiscount.h  main.cpp
1st year/Second Semester/Oop/Exam/PartOne/: Examination.h  Maximum.h  main.cpp
1st year/Second Semester/Oop/Exam/PartThree/: BasicPizza.h  Order.h  Pizza.h  PizzaWithCheeseTopping.h  PizzaWithPepperoniTopping.h  PizzaWithTopping.h  main.cpp
1st year/Second Semester/Oop/Exam/PartTwo/: fct.h  main.cpp
1st year/Second Semester/Oop/ExamPractice2/: CMakeLists.txt
1st year/Second Semester/Oop/ExamPractice2/PartOne/: Activity.h  ToDo.h  main.cpp
1st year/Second Semester/Oop/ExamPractice2/PartTwo/: Beverage.h  BeverageMachine.h  BeverageWithMilk.h  Coffee.h  Tea.h  main.cpp
Others-Progs/: NextTech.rar  pythonProject.rar  pyvenv.cfg
Others-Progs/Scripts/: activate  activate.bat
Others-Progs/crist/: CMakeLists.txt  main.cpp
Others-Progs/galea/: main.py
Others-Progs/internship/: database_basic_script.sql
Others-Progs/pythonProject/: gm.py  prob1.py  prob2.py  start.py
Others-Progs/pythonProject1/: main.py
Others-Progs/pythonProject2/: vsimple (1).py
Others-Progs/yonder/: truck.java
(+2470 files in other folders)
